<resources>
    <string name="app_name">FoodRunner</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="mobile_number_10_digits">Mobile Number(10 digits)</string>
    <string name="password">Password</string>
    <string name="register">Don\'t have an account? Sign up now</string>
    <string name="name">Name(Min. 3 characters)</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number (10 digits)</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password_min_4_characters">Password (Min. 4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_1">Register</string>
    <string name="login">Login</string>
    <string name="preference_file_name">FoodRunner Preferences</string>

    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="logout">Logout</string>
    <string name="faqs">FAQs</string>
    <string name="name_of_the_person">Name of the person</string>
    <string name="phone_number">Phone Number</string>
    <string name="food_item_name">Food Item Name</string>
    <string name="add">Add</string>
    <string name="proceed_to_cart">proceed to cart</string>
    <string name="remove">Remove</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="dash">------------------------------------------------------------------------------------------------------------</string>
    <string name="name_of_the_fooditem">Name of the FoodItem</string>
    <string name="name_of_the_restaurant">Name of the Restaurant</string>
    <string name="price">Price</string>
    <string name="name_of_restaurant">Name of Restaurant</string>
    <string name="date">Date</string>
    <string name="new_password">New Password</string>

    <string name="otp_4_characters">OTP(4 characters)</string>
    <string name="enter_the_received_otp_below">Enter the received OTP below</string>
    <string name="confirm_password1">Confirm Password</string>
    <string name="price_high_to_low">Price ( High to Low)</string>
    <string name="price_low_to_high">Price ( Low to High)</string>
    <string name="rating">Rating</string>
    <string name="_4_5">4.5</string>

</resources>
