<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewPasswordActivity"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="6dp"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:text="@string/enter_the_received_otp_below"/>

    <EditText
        android:id="@+id/etOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:hint="@string/otp_4_characters"
        android:inputType="numberPassword"
        android:maxLength="4"
        />

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:hint="@string/confirm_password1"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/btnNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_margin="10dp"
        android:text="Submit"
        android:textColor="#ffffff"
        android:textSize="18sp"
        />


</LinearLayout>