<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/app_icon"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_below="@id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:padding="10dp"
        android:hint="@string/mobile_number_10_digits"
        android:maxLength="10"
        android:inputType="phone"

        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_below="@id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:padding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_below="@id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="Login"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_below="@id/btnLogin"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:padding="6dp"
        android:textColor="#ffffff"/>

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:padding="6dp"
        android:textColor="#ffffff"/>

</RelativeLayout>