<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="#ffffff"

    >



    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:weightSum="8">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/txtSerialNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/txtFoodItemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_item_name"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/txtFoodItemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="200"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/rupees"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">


            <ToggleButton
                android:id="@+id/btnAddItem"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/colorPrimary"
                android:textOn="@string/remove"
                android:textOff="@string/add"
                android:textColor="#ffffff"
                android:layout_marginTop="12dp"
                android:layout_marginRight="3dp"/>

        </LinearLayout>


    </LinearLayout>
</LinearLayout>